<resources>
    <string name="app_name">POS-Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ambrosia_hotel_restaurant">lorem</string>
    <string name="total_harga">%1$s</string>
    <string name="total_harga_label">Total Harga</string>
    <string name="transaksi">Transaksi</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="transaksi_sukses">Transaction Successful</string>
    <string name="transaksi_code">1DI 8U2</string>
    <string name="back">Back</string>
    <string name="bayaran_label">Pembayaran</string>
    <string name="kembalianLabel">Kembalian</string>
    <string name="kode_antrian">1by 97n</string>
    <string name="total_harga_riwayat_transaksi">Rp.1000.00</string>
    <string name="waktu_transaksi">13-08-2023</string>
    <string name="date">Date</string>
    <string name="image_button_content_desc">Upload image</string>
    <string name="tambah_barang">Tambah barang</string>
    <string name="logout">Logout</string>
    <string name="settings_label">Settings</string>
    <string name="pegawai_label">Pegawai</string>
    <string name="phone_label">Phone</string>
    <string name="password_label">Password</string>
    <string name="phone_hint">0812381412</string>
    <string name="password_hint">*****</string>
    <string name="don_t_have_an_account_label">Don’t have an account?</string>
    <string name="email_label">Email</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="search_hint">Search</string>
</resources>