<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="30dp"
    tools:context=".pages.auth.register.RegisterActivity">

    <TextView
        android:layout_marginBottom="380dp"
        android:id="@+id/loginPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/auth_label"
        android:text="@string/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/loginPageTitle"
        android:id="@+id/phoneLabel"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/phone_hint"
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_input_height"
        android:background="@drawable/custom_input"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/auth_label"
        android:text="@string/email_label"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        android:id="@+id/emailLabel"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/email_hint"
        android:background="@drawable/custom_input"
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_input_height"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/auth_label"
        android:text="@string/password_label"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:id="@+id/passwordLabel"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/password_hint"
        android:background="@drawable/custom_input"
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_input_height"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:layout_marginTop="12dp"
        android:id="@+id/registerButton"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="67dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/auth_label"
        android:text="@string/don_t_have_an_account_label"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:id="@+id/accountLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/login"
        android:id="@+id/loginButton"
        app:layout_constraintStart_toEndOf="@+id/accountLabel"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>