<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    tools:context=".pages.transaksi.TransaksiActivity">
    
    <ImageView
        android:layout_marginBottom="500dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/checkIcon"/>

    <TextView
        android:id="@+id/transaksiSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/transaksi_sukses"
        app:layout_constraintTop_toBottomOf="@+id/checkIcon"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/kodeTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/transaksi_code"
        app:layout_constraintTop_toBottomOf="@+id/transaksiSuccess"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:textSize="28sp" />

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="12dp"
        android:id="@+id/transaksiRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/kodeTransaksi"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:listitem="@layout/transaksi_item"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/back"
        android:id="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/transaksiRecyclerView"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>