<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">
    
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/totalHargaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/total_harga_label"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/totalHarga"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="@dimen/spacing_transaksi_item"
        app:layout_constraintTop_toBottomOf="@+id/totalHargaLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/bayaranLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/bayaran_label"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="@dimen/spacing_transaksi_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalHarga"
        android:id="@+id/bayaran"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="@dimen/spacing_transaksi_item"
        app:layout_constraintTop_toBottomOf="@+id/bayaranLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/kembalianLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/kembalianLabel"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="@dimen/spacing_transaksi_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bayaran"
        android:id="@+id/kembalian"
        android:textSize="15sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>