<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginEnd="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="18dp"
    android:paddingVertical="5dp"
    android:layout_height="150dp">

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <ImageView
                android:id="@+id/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_credit_card" />
            
            <TextView
                android:layout_marginBottom="28dp"
                android:id="@+id/kodeTransaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/kode_antrian"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="12dp"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/waktuTransaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/waktu_transaksi"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/kodeTransaksi"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_harga_riwayat_transaksi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="22dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.cardview.widget.CardView>
    
</androidx.constraintlayout.widget.ConstraintLayout>